// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SFileInput.vue can have custom text 1`] = `
<div class="file-input">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Custom text
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="display: none;"></schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue can hide a file count 1`] = `
<div class="file-input">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control" multiple="multiple">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div>
      <!---->
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="">
      <schip-stub color="" isclosable="true" isactive="true" tag="li" closearialabel="Remove test-file-a.txt">
        test-file-a.txt
      </schip-stub>
      <schip-stub color="" isclosable="true" isactive="true" tag="li" closearialabel="Remove test-file-b.txt">
        test-file-b.txt
      </schip-stub>
    </schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue can upload multiple files 1`] = `
<div class="file-input">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">2 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="">
      <schip-stub color="" isclosable="true" isactive="true" tag="li" closearialabel="Remove test-file-a.txt">
        test-file-a.txt
      </schip-stub>
      <schip-stub color="" isclosable="true" isactive="true" tag="li" closearialabel="Remove test-file-b.txt">
        test-file-b.txt
      </schip-stub>
    </schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue drop zone can be a drop zone 1`] = `
<div class="file-input file-input--droppable">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <sicon-stub icon="upload-cloud" color="" size="large" class="file-input__icon"></sicon-stub>

        Drag and drop or click here to choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="display: none;"></schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue drop zone can hide the icon 1`] = `
<div class="file-input file-input--droppable">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Drag and drop or click here to choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="display: none;"></schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue drop zone handles "dragenter" correctly 1`] = `
<div class="file-input file-input--droppable">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display file-input__display--dragover">
        <sicon-stub icon="upload-cloud" color="" size="large" class="file-input__icon"></sicon-stub>

        Drag and drop or click here to choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="display: none;"></schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue drop zone handles "dragleave" correctly 1`] = `
<div class="file-input file-input--droppable">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <sicon-stub icon="upload-cloud" color="" size="large" class="file-input__icon"></sicon-stub>

        Drag and drop or click here to choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="display: none;"></schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue drop zone handles "dragover" correctly 1`] = `
<div class="file-input file-input--droppable">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <sicon-stub icon="upload-cloud" color="" size="large" class="file-input__icon"></sicon-stub>

        Drag and drop or click here to choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="display: none;"></schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue drop zone handles "drop" correctly 1`] = `
<div class="file-input file-input--droppable">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <sicon-stub icon="upload-cloud" color="" size="large" class="file-input__icon"></sicon-stub>

        Drag and drop or click here to choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="display: none;"></schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue handles inputs 1`] = `
<div class="file-input">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">1 file selected</span>
    </div>
  </slabel-stub> <output class="file-input__info">
    <!---->
    <schipgroup-stub color="" tag="ul" class="file-input__list" style="">
      <schip-stub color="" isclosable="true" isactive="true" tag="li" closearialabel="Remove test-file-a.txt">
        test-file-a.txt
      </schip-stub>
    </schipgroup-stub>
  </output>
</div>
`;

exports[`SFileInput.vue renders correctly 1`] = `
<div class="file-input"><label class="label" for="file-input">
    <div>
      File input
      <!---->
    </div>
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </label> <output class="file-input__info">
    <!---->
    <ul class="chip-group file-input__list" style="display: none;"></ul>
  </output></div>
`;
